Self/mydevorg/Unpackaged/Config/objects/My_Business_And_Leadership_Data__c.object
<CustomObject>
    <fields>
        <fullName>LFT_ND_ID__c</fullName>
        <label>Left Node Id</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ACCT_KEY__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Business And Leadership Data</relationshipLabel>
        <relationshipName>My_Business_And_Leadership_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RGT_ND_ID__c</fullName>
        <label>Right Node Id</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>My Business And Leadership Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MRKT_ACCT_KEY__c</columns>
        <columns>LFT_ND_ID__c</columns>
        <columns>RGT_ND_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Leadership Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Business And Leadership Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>